[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Fonts/BRLNSDB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://UI/UIButtons/UIButton.gd" type="Script" id=2]
[ext_resource path="res://UI/UIButtons/UIButton.png" type="Texture" id=3]
[ext_resource path="res://UI/UIButtons/UIButtonHover.png" type="Texture" id=4]
[ext_resource path="res://Resources/Audio/SFX/UIButtonHover.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="UIButton" type="TextureButton"]
self_modulate = Color( 0.0980392, 0.509804, 0.768627, 1 )
margin_right = 368.0
margin_bottom = 80.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
action = 4

[node name="Label" type="Label" parent="."]
margin_right = 368.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "UIButton"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIButtonHoverASP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
bus = "Effects"
[connection signal="mouse_entered" from="." to="." method="_on_UIButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
